[package]

name = "plugin"
version = "0.0.0"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
license = "MIT"

[lib]

name = "plugin"
path = "src/lib.rs"

[dependencies.typemap]

git = "https://github.com/reem/rust-typemap.git"

[dependencies.phantom]

git = "https://github.com/reem/rust-phantom.git"
