[package]

name = "plugin"
version = "0.2.6"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
description = "Lazily evaluated, order-independent plugins for extensible types."
repository = "https://github.com/reem/rust-plugin"
license = "MIT"

[dependencies]
typemap = "*"

[dev-dependencies]
void = "*"

